--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="main.css" />
-    <title>Circular Progress Bar</title>
+    <title>Barra de Progresso Circular</title>
 </head>
 <body>
     <div class="container">
         <div class="progress-circular">
             <span class="value">0%</span>
         </div>
-        <div class="text">Enter Any Number</div>
+        <div class="text">Digite Algum Número</div>
         <div class="btn">
             <input type="text" autofocus>
-            <button>Enter</button>
+            <button>Entra</button>
         </div>
     </div>
     <script src="script.js"></script>
